--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,10 @@
         ]
     },
     "require": {
-        "php": ">=5.5.9",
+        "php": ">=7.1",
+        "ext-json": "*",
+        "ext-http": "*",
+        "ext-curl": "*",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
         "incenteev/composer-parameter-handler": "^2.0",
